# async_iot

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: CI.yml  gh_pages.yml
async_iot_client/: Cargo.toml
async_iot_host/: Cargo.toml  Makefile  host.json.sample
async_iot_host/src/: config.rs  error.rs  lib.rs  main.rs  main_system_state.rs
async_iot_host/src/app/: base.rs  mod.rs  state.rs  system_state.rs  termination.rs
async_iot_host/src/app/hooks/: info.rs  misc.rs  mod.rs  shellyv1.rs  state.rs  system.rs  termination.rs
async_iot_host/src/app/tasks/: futureless.rs  mod.rs  shellyv1.rs  system_state.rs
async_iot_host/src/config/: config_json.rs  constants.rs  mod.rs
async_iot_host/src/traits/: mod.rs  result_to_json.rs
async_iot_models/: Cargo.toml
async_iot_models/src/: auth.rs  config.rs  error.rs  exit_codes.rs  lib.rs  logger.rs
async_iot_models/src/results/: mod.rs  result.rs  result_json.rs  result_state.rs
async_iot_models/src/results/result_json/: base.rs  mod.rs
async_iot_models/src/results/result_json/base/: base.rs  impl_deserialize.rs  mod.rs
async_iot_models/src/results/result_json/entry/: base.rs  impl_from_base.rs  impl_from_with_key.rs  mod.rs
async_iot_models/src/system_state/: base.rs  cpu.rs  disks.rs  memory.rs  mod.rs  networks.rs  system.rs  temperatures.rs  tests.rs
async_iot_models/src/traits/: build_with.rs  can_get.rs  can_post.rs  deserialize_with.rs  endpoint.rs  from_with_key.rs  has_state.rs  markers.rs  mod.rs  reqwest_transformer.rs  result_to_option.rs
async_iot_models/tests/: mod.rs
async_iot_models/tests/system_state/: mod.rs
async_iot_vendors/: Cargo.toml
async_iot_vendors/src/: error.rs  lib.rs
async_iot_vendors/src/device_type/: base.rs
async_iot_vendors/src/remote_system_state/: base.rs
async_iot_vendors/src/shellyv1/: auth.rs  config.rs  mod.rs
async_iot_vendors/src/shellyv1/devices/: mod.rs  shelly1.rs  shelly1l.rs
async_iot_vendors/src/shellyv1/states/: common.rs  light.rs  meters.rs  mod.rs  relay.rs  shelly.rs
async_iot_vendors/src/shellyv1/states/settings/: actions.rs  ap.rs  cloud.rs  login.rs  mod.rs  sta.rs
docker/async_iot-dev/: Dockerfile  async_iot.code-workspace
docs/: Makefile
docs/source/: async_iot.config.rst  async_iot.decorators.rst  async_iot.rst  conf.py  index.rst  modules.rst
src/py/async_iot/: __init__.py  cli.py
src/rust/: lib.rs
tests/: conftest.py  test_env.py
