[package]
name = "async_iot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "lib_async_iot"
path = "src/rust/lib.rs"
crate-type = ["cdylib"]

[dependencies]
async_iot_client = { path = "./async_iot_client" }
async_iot_host = { path = "./async_iot_host" }
async_iot_models = { path = "./async_iot_models" }
pyo3 = { version = "0", features = ["extension-module"] }
num-format = "0"
timeit = "0"
strum = { version = "0", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde-pickle = "1"
serde_with = "2"
tokio = { version = "1", features = ["full"] }
systemstat = "0.2.3"

[package.metadata.maturin]
python-source = "src/py"
name = "async_iot.lib_async_iot"
