[package]
name = "async_iot_host"
version = "0.1.0"
edition = "2021"
description = "An insecure API-only host that can relay the statuses of other devices on the same network."

[profile.release]
strip = true

[[bin]]
name = "async_iot_host"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(target_os="linux")'.dependencies]
openssl = { version = '0.10', features = ["vendored"]}

[features]
default = ["system_state", "remote_system_state"]
detailed_logging = []
jsonl_logging = ["async_iot_models/jsonl_logging"]
remote_system_state = ["async_iot_vendors/remote_system_state"]
system_state = []
shellyv1 = ["async_iot_vendors/shellyv1"]

[dependencies]
async-trait = "0"
async_iot_models = { path = "../async_iot_models", features = ["default"] }
async_iot_vendors = { path = "../async_iot_vendors", features = ["default"] }
async-ctrlc = "1"
clap = { version = "4", features = ["derive"] }
http-types = "2"
lazy_static = "1"
serde = "1"
serde_json = "1"
thiserror = "1"
tide = { version = "0" }
time = { version = "0", features = ["serde", "macros", "formatting" ]}
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
url = "2"
