[package]
name = "async_iot_models"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true

[lib]
name = "async_iot_models"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
python = ["dep:pyo3"]
# tide = ["dep:tide"]
jsonl_logging = []

[dependencies]
async-trait = "0"
pyo3 = { version = "0", optional = true }
lazy_static = "1"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
strum = { version = "0", features = ["derive"]}
sysinfo = { version = "0.29.4", features = ["serde"] }
systemstat = { version = "0.2.3", features = ["serde"] }
thiserror = { version = "1" }
# tide = { version = "0", optional=true }
time = { version = "0", features = ["serde", "formatting", "macros"] }

[target.'cfg(target_os = "linux")'.dependencies]
psutil = { version = "3" }
